[package]
name = "network-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35.0"
pinger = "1.2.3"
mac_address = "1.1.7"
rayon = "1.10.0"
extend = "1.2.0"
ring = "0.17.8"
phf = { version = "0.11.2", features = ["macros"] }
hex = "0.4.3"
base64 = "0.22.1"
md5 = "0.7.0"
sha-crypt = "0.5.0"
port_scanner = "0.1.5"
